--- a/Weather/Utilities/localization/ru.lproj/Localizable.strings
+++ b/Weather/Utilities/localization/ru.lproj/Localizable.strings
@@ -1,7 +1,10 @@
 // MARK: - Login
-"Login.LogoTitle" = "Погода";
+"Login.LogoTitle" = "Weather";
 "Login.Username.Placeholder" = "Имя пользователя";
 "Login.Password.Placeholder" = "Пароль";
 "Login.SignIn" = "Войти";
 "Login.SignUp" = "Зарегистрироваться";
 "Login.NoAccount" = "У вас нет аккаунта? ";
+"Login.Failure.Title" = "Попробуйте еще раз";
+"Login.Failure.Message" = "Ваши учетные данные неверны!";
+"Login.Failure.Cancel" = "Отмена";
