Header view for table view
- Added header view for add city table view;
- Changed colours set to reuse them;
- Added header title to display title.

--- a/Weather/Utilities/localization/en.lproj/Localizable.strings
+++ b/Weather/Utilities/localization/en.lproj/Localizable.strings
@@ -8,3 +8,6 @@
 "Login.Failure.Title" = "Try that again";
 "Login.Failure.Message" = "Your credentials are incorrect!";
 "Login.Failure.Cancel" = "Cancel";
+
+// MARK: - Add City
+"AddCity.Header.Title" = "Add City";
