--- a/Weather/Utilities/localization/ru.lproj/Localizable.strings
+++ b/Weather/Utilities/localization/ru.lproj/Localizable.strings
@@ -9,5 +9,17 @@
 "Login.Failure.Message" = "Ваши учетные данные неверны!";
 "Login.Failure.Cancel" = "Отмена";
 
+// MARK: - City List
+"CityList.Header.Title" = "Список городов";
+
 // MARK: - Add City
 "AddCity.Header.Title" = "Добавить город";
+
+// MARK: - WeekDayPicker
+"WeekDayPicker.Monday" = "ПН";
+"WeekDayPicker.Tuesday" = "ВТ";
+"WeekDayPicker.Wednesday" = "СР";
+"WeekDayPicker.Thursday" = "ЧТ";
+"WeekDayPicker.Friday" = "ПТ";
+"WeekDayPicker.Saturday" = "СБ";
+"WeekDayPicker.Sunday" = "ВС";
